# py-learning

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  tox.ini
docs/: changelog.rst  conf.py  index.rst  lumache.py  plugins_api.rst  usage.rst
docs/_static/: custom.css
py_learning/: __init__.py  installer.py
py_learning/base/: enum_example.py
src/: main.py
src/py_learning/: __about__.py  __init__.py
tasks/: release.py
tests/: test_about.py  test_enum.py  test_version.py
