[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-vcs>=0.3",
    "hatchling>=1.17",
]

[project]
name = "py-learning"
description = "python learn record, new skil and practice cases"
readme = "README.md"
keywords = [
    "python",
    "learn",
    "new skills",
    "record",
]
license = "Apache-2.0"
authors = [
    { name = "Dylen", email = "dylen.zhangwq@gmail.com" },
]
maintainers = [
    { name = "Rebecca", email = "rebecca.xuc@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [
    "version",
]
dependencies = [
    "cachetools>=5.3",
    "chardet>=5.1",
    "colorama>=0.4.6",
    "filelock>=3.12",
    'importlib-metadata>=6.6; python_version < "3.8"',
    "packaging>=23.1",
    "platformdirs>=3.5.1",
    "pluggy>=1",
    "pyproject-api>=1.5.1",
    'tomli>=2.0.1; python_version < "3.11"',
    'typing-extensions>=4.6.2; python_version < "3.8"',
    "virtualenv>=20.23",
]
optional-dependencies.docs = [
    "furo>=2023.5.20",
    "sphinx>=7.0.1",
    "sphinx-argparse-cli>=1.11",
    "sphinx-autodoc-typehints!=1.23.4,>=1.23",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinxcontrib-towncrier>=0.2.1a0",
    "towncrier>=22.12",
]
optional-dependencies.testing = [
    "build[virtualenv]>=0.10",
    "covdefaults>=2.3",
    "devpi-process>=0.3",
    "diff-cover>=7.5",
    "distlib>=0.3.6",
    "flaky>=3.7",
    "hatch-vcs>=0.3",
    "hatchling>=1.17",
    "psutil>=5.9.5",
    "pytest>=7.3.1",
    "pytest-cov>=4.1",
    "pytest-mock>=3.10",
    "pytest-xdist>=3.3.1",
    "re-assert>=1.1",
    'time-machine>=2.9; implementation_name != "pypy"',
    "wheel>=0.40",
]

[project.urls]
Documentation = "https://github.com/dylen-zhangwq/py-learning#readme"
Issues = "https://github.com/dylen-zhangwq/py-learning/issues"
Source = "https://github.com/dylen-zhangwq/py-learning"

[tool.hatch]
build.dev-mode-dirs = ["src"]
build.hooks.vcs.version-file = "src/py_learning/version.py"
build.targets.sdist.include = ["/src", "/tests", "/tox.ini"]
version.source = "vcs"

[tool.black]
line-length = 120

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
    ".tox*/pypy*/site-packages",
    ".tox*\\*\\Lib\\site-packages",
    "*/src",
    "*\\src",
]
report.fail_under = 88
report.omit = []
run.parallel = true
run.plugins = ["covdefaults"]

[tool.isort]
known_first_party = ["py_learning", "tests"]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
overrides = [
    { module = [
        "colorama.*",
        "coverage.*",
        "distlib.*",
        "flaky.*",
        "importlib_metadata.*",
        "pluggy.*",
        "psutil.*",
        "re_assert.*",
        "virtualenv.*",
    ], ignore_missing_imports = true },
]

[tool.pep8]
max-line-length = "120"

[tool.flake8]
max-complexity = 22
max-line-length = 120
unused-arguments-ignore-abstract-functions = true
noqa-require-code = true
dictionaries = ["en_US", "python", "technical", "django"]
ignore = [
    "E203", # whitespace before ':'
    "W503", #  line break before binary operator
    "SC200", # possibly misspelt word eg: changelog
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=auto -ra --showlocals --no-success-flaky-report"

[tool.towncrier]
name = "py-learning"
filename = "docs/changelog.rst"
directory = "docs/changelog"
title_format = false
issue_format = ":issue:`{issue}`"
template = "docs/changelog/template.jinja2"
# possible types, all default: feature, bugfix, doc, removal, misc
